--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
-    background-color: ;
-   {border-style: solid;}
+   
+   border-style: solid;}
 }
 
 h1 {
-    color: navy;
-    margin-left: ;
+     ;
 }
