--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 	 font: 16px Helvetica, Sans-Serif;}
 	
 p {
-    border: 5px solid powderblue;
-    margin: 50px;
+    border: 5x solid powderblue;
+    margin: 5px;
 	
 }
 
 ul {
     border: 5px solid powderblue;
-    margin: 50px;
+    margin: 5px;
 
 
 }
